# byocruda

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
config/: config.toml
src/byocruda/: main.py
src/byocruda/api/v1/endpoints/: departments.py  endpoints.py  users.py  workstations.py
src/byocruda/core/: config.py  database.py  logging.py
src/byocruda/models/: departments.py  models.py  users.py  workstations.py
src/byocruda/schemas/: schemas.py
tests/: test_config.py  test_database.py  test_main()
