[project]
name = "byocruda"
version = "0.1.0"
description = "Build your own CRUD Application - A highly customizable asset management system"
authors = [
    {name = "pmarcop", email = "4eot55ud@duck.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "sqlmodel>=0.0.14",
    "loguru>=0.7.3",
    "ldap3>=2.9.1",
    "tomli>=2.0.1"
]
requires-python = ">=3.12"
license = {text = "GPL-3.0"}
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12",
    "isort>=5.12.0",
    "flake8>=7.1.0",
    "mypy>=1.6.1",
    "httpx>=0.27.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.2",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=byocruda"
